# Task-Manager

./: .gitignore  pyproject.toml
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/static/css/: styles.css
src/accounts/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
src/docker/: Dockerfile  docker-compose.yml
src/static/css/: main.css  theme.css
src/static/js/: edit_task.js  theme.js
src/task_manage/: admin.py  filters.py  forms.py  models.py  oauth.py  urls.py  views.py
src/task_manage/migrations/: 0001_initial.py  0002_alter_task_deadline.py  0003_task_team.py  0004_alter_category_team_alter_task_category_and_more.py  0005_alter_category_options.py
src/task_manage/static/css/: styles.css
src/task_manage/templates/task_manage/: calendar.html  dashboard.html  index.html  my_tasks.html  profile.html
src/task_manager/: celery.py  settings.py  urls.py
src/teams/: admin.py  models.py  urls.py  views.py
src/teams/migrations/: 0001_initial.py  0002_alter_teammember_team.py  0003_alter_teammember_user.py
src/teams/templates/teams/: team_members.html  team_nav.html  team_settings.html  team_tasks.html  teams.html
src/templates/: base.html  nav.html
