[project]
name = "task-manager"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
