[project]
name = "task-manager"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "django-crispy-forms (>=2.6,<3.0)",
    "crispy-bootstrap5 (>=2026.3,<2027.0)",
    "requests (>=2.34.2,<3.0.0)",
    "authlib (>=1.7.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
